# teacher-copilot

./: .gitignore  app.py  guide.md  pyproject.toml  rain_api_entry.py
.github/workflows/: windows-build.yml
core/: dialogue_exercises.py  dialogue_generator.py  exercise_generator.py  guide_chat.py  lesson_planner.py  llm_client.py  materials_store.py  notebook_assistant.py  ocr_helper.py  program_planner.py  progress_store.py  quiz_generator.py  quiz_pdf.py  roleplay_cards.py  roleplay_pdf.py  scenario_dialogue.py  schedule_store.py  storage_paths.py  students_store.py  summary_generator.py  worksheet_generator.py
data/: schedule.json  students.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/components/: Notebook.tsx
prompts/: cefr_levels.txt  turkish_grammar.txt
